Modificaciones de descripciones de endpoints según documentación de AFIP
