# cmd/api/docs/swagger.yaml
@@ -320,6 +320,11 @@ definitions:
       FechaUltAct:
         type: string
     type: object
+  dto.InfoResponse:
+    properties:
+      version:
+        type: string
+    type: object
   dto.MessageResponse:
     properties:
       message:
@@ -468,7 +473,8 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Anular Carátula sin COEMs
+      description: Método que permite eliminar una carátula. Si se encuentran COEMs
+        en estado Presentada o Autorizada se detiene la ejecución.
       parameters:
       - description: API Key de acceso
         in: header
@@ -507,7 +513,8 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Anular COEM
+      description: Método a través del cual se anula una COEM. La COEM debe estar
+        en estado en CURSO o REGISTRADA.
       parameters:
       - description: API Key de acceso
         in: header
@@ -546,7 +553,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: Cerrar COEM
+      description: Método a través del cual se cierra la carga de una COEM asociada
+        a una Carátula, permitiendo que el operador Aduanero pueda trabajar con ella.
+        La COEM debe estar en estado CUR.
       parameters:
       - description: API Key de acceso
         in: header
@@ -613,7 +622,10 @@ paths:
     put:
       consumes:
       - application/json
-      description: Rectificar una Carátula sin COEMs
+      description: Permite rectificar los datos de una Carátula previamente creada
+        con el método RegistrarCaratula. Entre las restricciones, no se permitirá
+        cargar datos idénticos a otra Carátula existente, ni modificar aquella carátula
+        que tenga COEMs asociados.
       parameters:
       - description: API Key de acceso
         in: header
@@ -652,7 +664,10 @@ paths:
     put:
       consumes:
       - application/json
-      description: Rectificar COEM
+      description: Método a través del cual se modifican los valores de una COEM.
+        La COEM debe estar en curso o registrada. No se habilita rectificar una COEM
+        presentada o autorizada. No debe existir solicitud de cierre de carga iniciada
+        o aprobada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -691,7 +706,8 @@ paths:
     post:
       consumes:
       - application/json
-      description: Registra una nueva Carátula
+      description: Crea el identificador necesario para inicializar el circuito de
+        comunicación de embarque.
       parameters:
       - description: API Key de acceso
         in: header
@@ -730,7 +746,10 @@ paths:
     post:
       consumes:
       - application/json
-      description: Registrar COEM en Carátula
+      description: Método a través del cual se registran los valores de una COEM comprendidos
+        en información de Contenedores con Carga, Contenedores Vacíos y Mercadería
+        suelta, asociados a un Identificador de Carátula previamente creado con el
+        método RegistrarCaratula.
       parameters:
       - description: API Key de acceso
         in: header
@@ -769,7 +788,9 @@ paths:
     post:
       consumes:
       - application/json
-      description: Solicitar anulación COEM
+      description: Método a través del cual se solicita la anulación de una COEM cuando
+        ya se encuentra en estado PRESENTADA o AUTORIZADA, caso contrario puede utilizar
+        el método AnularCOEM.
       parameters:
       - description: API Key de acceso
         in: header
@@ -808,7 +829,10 @@ paths:
     put:
       consumes:
       - application/json
-      description: Solicitar cambio de Buque para Carátulas con COEMs
+      description: Método a través del cual se modificarán el Identificador y/o nombre
+        del buque. Deben existir COEMs presentadas o autorizadas, caso contrario aún
+        se puede enviar la rectificación de la carátula. No debe existir solicitud
+        de cierre de carga iniciada o aprobada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -847,7 +871,10 @@ paths:
     put:
       consumes:
       - application/json
-      description: Solicitar cambio de Fechas para Carátulas con COEMs
+      description: Método a través del cual se modifican las Fechas de Arribo y/o
+        Fecha de Zarpada de la Carátula. Deben existir COEMs presentadas o autorizadas,
+        caso contrario aún se puede enviar la rectificación de la carátula. No debe
+        existir solicitud de cierre de carga iniciada o aprobada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -886,7 +913,10 @@ paths:
     put:
       consumes:
       - application/json
-      description: Solicitar cambio de Lugar Operativo para Carátulas con COEMs
+      description: Método a través del cual se modifica el Lugar Operativo de la Carátula.
+        Deben existir COEMs presentadas o autorizadas, caso contrario aún se puede
+        enviar la rectificación de la carátula. No debe existir solicitud de cierre
+        de carga iniciada o aprobada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -925,7 +955,11 @@ paths:
     post:
       consumes:
       - application/json
-      description: Solicitar Cierre de Carga Contenedores y/o Bultos
+      description: Método a través del cual se solicita el cierre de carga de una
+        Carátula que contiene COMEs cuyos permisos de embarque amparan contenedores
+        o bultos sueltos (no Granel). Todas las COEMs deben estar en estado AUTORIZADA
+        o ANULADA. No se consideran las marcadas como NO ABORDO. No debe existir solicitud
+        de cierre de carga contenedores o bultos sueltos iniciada o aprobada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -964,7 +998,12 @@ paths:
     post:
       consumes:
       - application/json
-      description: Solicitar Cierre de Carga Granel
+      description: Método a través del cual se solicita el cierre de carga de una
+        Carátula que contiene COEMs cuyos permisos de embarque contienen Mercadería
+        a granel. Todas las COEMs deben estar en estado AUTORIZADA o ANULADA. No se
+        consideran las líneas marcadas como NO ABORDO. Requiere detalle de todas las
+        COMEs, Permisos de Embarque e ítems abordo. No debe existir solicitud de cierre
+        de carga granel iniciada o aprobada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1003,7 +1042,10 @@ paths:
     post:
       consumes:
       - application/json
-      description: Solicitar No Abordo
+      description: Método a través del cual se solicita no abordar una o varias líneas
+        de mercadería o contenedores asociados a una carátula/COEM. La COEM debe estar
+        en estado PRESENTADA o AUTORIZADA. No debe existir solicitud de cierre de
+        carga iniciada o aprobada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1070,7 +1112,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Obtener Consulta Estados COEM
+      description: Obtiene una lista de comunicaciones de embarque comprendidas en
+        la cabecera informada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1110,7 +1153,10 @@ paths:
     get:
       consumes:
       - application/json
-      description: Obtener Consulta No Abordo
+      description: Obtiene una lista de aquellas comunicaciones de embarque relacionadas
+        con la carátula de referencia para las cuales se ha definido el no abordaje
+        parcial o total de su contenido, el cual puede tratarse de bultos sueltos,
+        mercadería a granel, contenedores de carga o cont¢nedores vacíos.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1150,7 +1196,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Obtener Consulta de Solicitudes
+      description: Obtiene la lista de solicitudes de comunicaciones asociadas a la
+        cabecera informada. Número y tipo de solicitud, estado y fecha.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1244,7 +1291,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Obtiene la última actualización de la tabla consultada
+      description: Retorna la fecha de última actualización de la tabla consultada.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1310,7 +1357,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Lista Arancel
+      description: Retorna tabla del tipo código / descripción / opción / vigencia.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1350,7 +1397,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Lista Descripción
+      description: Emite tabla del tipo código / descripción.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1430,7 +1477,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Lista de Empresas
+      description: Emite tabla del tipo cuit / razón social.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1470,7 +1517,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Lista de Lugares Operativos
+      description: Emite tabla del tipo código / descripción / vigencia / aduana /
+        lugar operativo.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1510,7 +1558,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Lista de Paises y Aduanas
+      description: Emite tabla del tipo código / descripción / vigencia /país o aduana.
       parameters:
       - description: API Key de acceso
         in: header
@@ -1550,7 +1598,9 @@ paths:
     get:
       consumes:
       - application/json
-      description: Lista de Tablas de Referencia
+      description: 'Emite tabla del tipo: Tabla de Referencia / Descripción Tabla
+        Referencia / WebMethod (que se debe utilizar para obtener los datos de dicha
+        tabla).'
       parameters:
       - description: API Key de acceso
         in: header
@@ -1596,7 +1646,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.DummyResponse'
+            $ref: '#/definitions/dto.InfoResponse'
         "401":
           description: Unauthorized
           schema:
